--- a/sass/index.scss
+++ b/sass/index.scss
@@ -650,7 +650,8 @@ a {
     border: solid 1px #a6afca;
     input{
       float: left;
-      width: 280px;
+      width: 320px;
+      text-align: center;
     }
     .submit-btn {
       float: right;
